<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>arcane-vault</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>

    <parent>
        <groupId>aphos</groupId>
        <artifactId>aphos-parent</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <prj.build.type>dev</prj.build.type>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>exec-maven-plugin</artifactId>
                        <groupId>org.codehaus.mojo</groupId>
                        <executions>
                            <execution>
                                <id>symlink for res</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${basedir}/ln.cmd</executable>
                                </configuration>
                            </execution>
                            <execution>
                                <id>clean symlink for res</id>
                                <phase>pre-clean</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${basedir}/rm_symlinks.cmd</executable>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>travis</id>
            <properties>
                <prj.build.type>travis</prj.build.type>
            </properties>
        </profile>
    </profiles>

    <dependencies>

        <!-- https://mvnrepository.com/artifact/com.github.weisj/darklaf-theme -->
        <dependency>
            <groupId>com.github.weisj</groupId>
            <artifactId>darklaf-theme</artifactId>
            <version>2.5.5</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>aphos</groupId>
            <artifactId>eidolon-core</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>aphos</groupId>
            <artifactId>core-engine</artifactId>
            <version>1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>aphos</groupId>
            <artifactId>LibGdx-Core</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>com.github.weisj</groupId>
            <artifactId>darklaf-core</artifactId>
            <version>2.5.5</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>15</source>
                    <target>15</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>main.launch.ArcaneVault</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>